--- a/frontend/src/app/pages/home/transform/transform.component.scss
+++ b/frontend/src/app/pages/home/transform/transform.component.scss
@@ -20,11 +20,12 @@
   cursor: pointer;
 }*/
 
-//nb-card {
+nb-card {
+  max-width: 800px;
   //text-align: center;
   //min-width: 40rem;
   //max-height: 100vh;
   //overflow-y: scroll;
   //overflow: visible
-//}
+}
 
