--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -148,7 +148,7 @@
                   target="_blank">
                   <i>{{schemaRef}}</i></a></p>
               <p *ngIf="schemaRef!==''&&schemaRefFormat==='file'">File: <i>{{schemaRef}}</i></p>
-              <nb-select placeholder="Select Json Schema" size="small" [(ngModel)]=selectedSchema
+              <nb-select placeholder="Select Json Schema" size="small" [(ngModel)]="selectedSchema"
                 (ngModelChange)="schemaChanged($event, 'DB')">
                 <nb-option *ngFor="let schema of schemas" value={{schema.id}}>{{schema.name}}</nb-option>
               </nb-select>&nbsp;
