--- a/frontend/src/app/pages/home/actions/actions.component.html
+++ b/frontend/src/app/pages/home/actions/actions.component.html
@@ -1,5 +1,5 @@
 <button nbButton outline aria-label="Name" status="basic" [nbContextMenu]="actions"
-  nbContextMenuTag="service-context-menu{{ value.id }}">
+  nbContextMenuTag="service-context-menu{{ value._id }}">
   <nb-icon icon="settings-2"></nb-icon>
 </button>
 <!-- Register Record modal ng-template -->
