--- a/frontend/src/app/pages/home/details/details.component.html
+++ b/frontend/src/app/pages/home/details/details.component.html
@@ -21,7 +21,7 @@
         <div>
           <div class="col-sm py-1">
             <div class="accent">
-              <i><b>{{ 'general.dmm.id' | translate }}:</b> {{ data.id }}</i>
+              <i><b>{{ 'general.dmm._id' | translate }}:</b> {{ data._id }}</i>
             </div>
           </div>
         </div>
