--- a/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.html
+++ b/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.html
@@ -14,14 +14,6 @@
   <nb-card-body class="m-2 p-4">
     <h6>
       <form>
-        <label for="mapId" fullWidth>{{ 'general.dmm.mapId' | translate }}</label>
-        <br>
-        <input *ngIf="save" [(ngModel)]="adapterId" nbInput type="text" fullWidth [placeholder]=placeholders.mapId
-          [ngModelOptions]="{standalone: true}" />
-        <input disabled *ngIf="update" [(ngModel)]="adapterId" nbInput type="text" fullWidth
-          [placeholder]=placeholders.mapId [ngModelOptions]="{standalone: true}" />
-        <br>
-        <br>
         <label for="name" fullWidth>{{ 'general.adapters.name' | translate }}</label>
         <br>
         <input [(ngModel)]="name" nbInput type="text" fullWidth placeholder="{{ 'general.adapters.name' | translate }}"
@@ -43,22 +35,22 @@
         </nb-select>
         <br>
         <br>
-        <nb-checkbox *ngIf="schema" [(ngModel)]="saveSchema" [ngModelOptions]="{standalone: true}">{{ schemaSaved ?
+        <nb-checkbox *ngIf="unsaved.schema" [(ngModel)]="saveSchema" [ngModelOptions]="{standalone: true}">{{ schemaSaved ?
           ('general.dmm.update_schema' | translate) : ('general.dmm.save_schema' | translate) }} </nb-checkbox>
         <br>
         <br>
-        <nb-checkbox *ngIf="sourceData" [(ngModel)]="saveSource" [ngModelOptions]="{standalone: true}">{{ sourceSaved?
+        <nb-checkbox *ngIf="unsaved.source" [(ngModel)]="saveSource" [ngModelOptions]="{standalone: true}">{{ sourceSaved?
           ('general.dmm.update_source' | translate) : ('general.dmm.save_source' | translate) }} </nb-checkbox>
         <br>
         <br>
         <h3>
           <br>
-          <button *ngIf="!name || !adapterId" disabled nbButton appearance="outline" shape="semi-round" size="medium"
+          <button *ngIf="!name" disabled nbButton appearance="outline" shape="semi-round" size="medium"
             status="info" (click)="confirm()">
             <i class="mx-1">{{ (save) ? ('general.dmm.confirmSave' | translate) : ('general.dmm.confirmEdit' |
               translate) }}</i>
           </button>
-          <button *ngIf="name && adapterId" nbButton appearance="outline" shape="semi-round" size="medium" status="info"
+          <button *ngIf="name" nbButton appearance="outline" shape="semi-round" size="medium" status="info"
             (click)="confirm()">
             <i class="mx-1">{{ (save) ? ('general.dmm.confirmSave' | translate) : ('general.dmm.confirmEdit' |
               translate) }}</i>
