--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,7 +1,6 @@
 <nb-layout>
   <nb-layout-header fixed>
     <div class="header-container">
-      <img class="ml-5 logo text-right" src="assets/images/app/across-logo.png" style="height: 64px" />
       <div class="ml-5 p-2 h2 text-right">{{ 'general.welcome' | translate }}</div>
     </div>
   </nb-layout-header>
@@ -21,15 +20,12 @@
               <link type="text/css" rel="stylesheet" href="https://login.agid.gov.it/saml/spid-sp-access-button/css/spid-sp-access-button.min.css" />
 
               <a
-                class="italia-it-button localIdM-button-size-l button-spid"
+                class="italia-it-button button-spid"
                 eidas-idp-button="#spid-idp-button-medium-post"
                 aria-haspopup="true"
                 aria-expanded="false"
                 (click)="login()"
-              >
-                <span class="italia-it-button-icon"
-                  ><img src="assets/images/login-logo/across-logo-bianco.png" onerror="this.src='assets/images/login-logo/across-logo-bianco.png'; this.onerror=null;" alt=""
-                /></span>
+              > <!--localIdM-button-size-l-->
                 <span class="italia-it-button-text">{{ 'login.login_with_local_idm' | translate }}</span>
               </a>
             </nb-card-body>
