--- a/frontend/src/app/pages/data-model-mapper/dmm.component.scss
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.scss
@@ -19,3 +19,16 @@ label {
   top: 1rem;
   cursor: pointer;
 }
+
+pre {
+  background-color: #c0c0c0;
+  padding: 10px;
+  overflow-x: auto;
+  max-width: 80vw; /* Imposta la larghezza massima in percentuale rispetto alla larghezza dello schermo */
+}
+
+code {
+  font-family: 'Courier New', Courier, monospace;
+  color: #333;
+  white-space: pre-wrap; /* Per gestire i ritorni a capo */
+}
