minio and curl updates

--- a/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.html
+++ b/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.html
@@ -1,7 +1,7 @@
 <nb-card *ngIf="!message">
   <nb-card-header class="d-flex align-content-center justify-content-between">
     <div> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </div>
-    <div *ngIf="!save || updateAdapter">
+    <div *ngIf="!save">
       <h3>{{ 'general.dmm.edit' | translate }}</h3>
     </div>
     <div *ngIf="save">
@@ -14,19 +14,19 @@
   <nb-card-body class="m-2 p-4">
     <h6>
       <form>
-        <label for="name" fullWidth>{{ 'general.adapters.name' | translate }}</label>
+        <label for="name" fullWidth>{{ 'general.mapperRecords.name' | translate }}</label>
         <br>
-        <input [(ngModel)]="name" nbInput type="text" fullWidth placeholder="{{ 'general.adapters.name' | translate }}"
+        <input [(ngModel)]="name" nbInput type="text" fullWidth placeholder="{{ 'general.mapperRecords.name' | translate }}"
           [ngModelOptions]="{standalone: true}" />
         <br>
         <br>
-        <label for="description" fullWidth>{{ 'general.adapters.description' | translate }}</label>
+        <label for="description" fullWidth>{{ 'general.mapperRecords.description' | translate }}</label>
         <br>
         <input [(ngModel)]="description" nbInput type="text" fullWidth
-          placeholder="{{ 'general.adapters.description' | translate }}" [ngModelOptions]="{standalone: true}" />
+          placeholder="{{ 'general.mapperRecords.description' | translate }}" [ngModelOptions]="{standalone: true}" />
         <br>
         <br>
-        <label for="status" fullWidth>{{ 'general.adapters.status' | translate }}</label>
+        <label for="status" fullWidth>{{ 'general.mapperRecords.status' | translate }}</label>
         <br>
         <nb-select fullWidth placeholder="Under development" [(ngModel)]="status" (click)="fixBrokenPageBug()"
           [ngModelOptions]="{standalone: true}">
